# finetuning

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  MIGRATION.md  NOTICE  README.md  RELEASE-PROVENANCE.json  SUPPORT.md  astro.config.mjs  eslint.config.js  package-lock.json  package.json  tsconfig.astro.json  tsconfig.json  vercel.json
.github/workflows/: alpha-artifacts.yml  ci.yml  (+1 more)
docs/: alpha-chat-workflows.md  architecture.md  experimental-advanced-distillation.md  experimental-remote-and-governed-logs.md  full-tool-trajectory-tutorial.md  runpod-phase20.md  runpod-phase21.md  runpod-phase22.md  runpod-phase23.md
examples/: offline-training-spec.json  provider-config.example.json
gg/: finetuning-core-implementation-plan-2026-07-11.md
locks/: embedding-models-v1.json  license-notice-inventory-v1.json  model-qualification-v2.json  qualification-blockers-v2.json  recipe-support-v1.json
python/: README.md  pyproject.toml  setup.cfg  test_framework_architecture.py  test_model_recipes.py  test_phase15.py  test_phase20.py  test_phase6.py  test_phase7.py
python/amxv_finetuning_trainer/: __init__.py  audit.py  checkpoints.py  cli.py  contracts.py  embedding_contracts.py  embedding_training.py  engine.py  execution_contracts.py  experimental.py  fake_runner.py  framework.py  recipe-evidence.json  runner.py  test_runner_cases.py
python/training_tests/: __init__.py  torch_objective.py
schemas/: artifact-manifest-v1.schema.json  dataset-example-v1.schema.json  embedding-artifact-manifest-v1.schema.json  embedding-dataset-manifest-v1.schema.json  embedding-record-v1.schema.json  embedding-training-event-v1.schema.json  embedding-training-spec-v1.schema.json  model-qualification-catalog-v2.schema.json  model-qualification-v2.schema.json  preference-record-v1.schema.json  protocol-compatibility-v1.json  qualification-blockers-v2.schema.json  qualification-evidence-v2.schema.json  qualification-store-v2.schema.json  qualification-trust-policy-v1.schema.json  training-event-v1.schema.json  training-spec-v1.schema.json
scripts/: api-report.mjs  check-runpod-openapi.mjs  generate-cli-command-reference.mjs  run-tests.mjs  verify-cli.mjs  verify-docs-build.mjs  verify-docs.mjs  verify-fixtures.mjs  verify-log-deferment.mjs  verify-package.mjs  verify-persona-generation.mjs  verify-phase17-docs.mjs  verify-provider-adapters.mjs  verify-provider-config.mjs  verify-python-package.mjs  verify-readme-workflow.mjs  verify-release-readiness.mjs  verify-simulation-runners.mjs  verify-translation.mjs
src/: cli.ts  content.config.ts  index.ts  openai.ts  validation.ts
test/: acceptance-architecture.test.mjs  compatibility.test.mjs  generate-cross-runtime-qualification.mjs  log-deferment-contract.test.mjs  model-qualification.test.mjs  package.test.mjs  phase10.test.mjs  phase11.test.mjs  phase12.test.mjs  phase13.test.mjs  phase14.test.mjs  phase15.test.mjs  phase16.test.mjs  phase2.test.mjs  phase20.test.mjs  phase21.test.mjs  phase22.test.mjs  phase23.test.mjs  phase3-cli.test.mjs  phase3.test.mjs  phase4.test.mjs  phase5-cli.test.mjs  phase5.test.mjs  phase6.test.mjs  phase7.test.mjs  phase9.test.mjs  portable-runtime.test.mjs  unit.test.mjs
(+157 files in other folders)
