[build-system]
requires = ["setuptools>=75,<81", "wheel>=0.44,<1"]
build-backend = "setuptools.build_meta"

[project]
name = "amxv-finetuning-trainer"
version = "0.0.0"
description = "Offline-contract and gated Hugging Face trainer for @amxv/finetuning"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "amxv" }]
requires-python = ">=3.9"
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
training = [
  "transformers>=4.57,<5",
  "datasets>=4,<5",
  "trl>=0.24,<1",
  "peft>=0.17,<1",
  "accelerate>=1.10,<2",
  "tokenizers>=0.22,<1",
  "bitsandbytes>=0.47,<1; platform_system == 'Linux'",
  "cryptography>=45,<47",
]
build = ["build>=1.2,<2"]
dev = ["ruff==0.12.11"]

[project.scripts]
amxv-finetuning-trainer = "amxv_finetuning_trainer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["amxv_finetuning_trainer*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
amxv_finetuning_trainer = ["recipe-evidence.json"]

[tool.ruff]
target-version = "py39"
line-length = 120
extend-exclude = ["build", "dist", "*.egg-info"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
